// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns convertStringToQuery 1`] = `
{
  "filters": [
    {
      "property": "namespace",
      "values": [
        "open-cluster-management",
      ],
    },
    {
      "property": "kind",
      "values": [
        "pod",
      ],
    },
  ],
  "keywords": [],
  "limit": 1000,
}
`;

exports[`Correctly returns formatSearchbarSuggestions 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "filter",
    "name": "Filters",
  },
  {
    "id": "id-kind",
    "kind": "filter",
    "name": "kind",
  },
  {
    "id": "id-cluster",
    "kind": "filter",
    "name": "cluster",
  },
  {
    "id": "id-deployment",
    "kind": "filter",
    "name": "deployment",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions of name values 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "value",
    "name": "name values",
  },
  {
    "id": "id-name2",
    "kind": "value",
    "name": "name2",
  },
  {
    "id": "id-name3",
    "kind": "value",
    "name": "name3",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions of namespace values 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "value",
    "name": "namespace values",
  },
  {
    "id": "id-namespace1",
    "kind": "value",
    "name": "namespace1",
  },
  {
    "id": "id-namespace2",
    "kind": "value",
    "name": "namespace2",
  },
  {
    "id": "id-namespace3",
    "kind": "value",
    "name": "namespace3",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions of operators 1`] = `
[
  {
    "disabled": true,
    "id": "id-operator-label",
    "kind": "label",
    "name": "Operators",
  },
  {
    "id": "id-<=",
    "kind": "value",
    "name": "<=",
  },
  {
    "id": "id->=",
    "kind": "value",
    "name": ">=",
  },
  {
    "id": "id-!=",
    "kind": "value",
    "name": "!=",
  },
  {
    "id": "id-!",
    "kind": "value",
    "name": "!",
  },
  {
    "id": "id-=",
    "kind": "value",
    "name": "=",
  },
  {
    "id": "id-<",
    "kind": "value",
    "name": "<",
  },
  {
    "id": "id->",
    "kind": "value",
    "name": ">",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions with date 1`] = `
[
  {
    "disabled": true,
    "id": "id-filter-label",
    "kind": "label",
    "name": "created within the last:",
  },
  {
    "id": "id-date-hour",
    "kind": "value",
    "name": "hour",
  },
  {
    "id": "id-date-day",
    "kind": "value",
    "name": "day",
  },
  {
    "id": "id-date-week",
    "kind": "value",
    "name": "week",
  },
  {
    "id": "id-date-month",
    "kind": "value",
    "name": "month",
  },
  {
    "id": "id-date-year",
    "kind": "value",
    "name": "year",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions with loading item 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "value",
    "name": "name values",
  },
  {
    "disabled": true,
    "id": "id-loading",
    "kind": "label",
    "name": "Loading more...",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions with operator already chosen (single number option) 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "value",
    "name": "cpu values",
  },
  {
    "disabled": true,
    "id": "id-values-range",
    "kind": "value",
    "name": "Min: 1 - Max: 1",
  },
]
`;

exports[`Correctly returns formatSearchbarSuggestions with operator already chosen 1`] = `
[
  {
    "disabled": true,
    "id": "id-suggestions-label",
    "kind": "value",
    "name": "cpu values",
  },
  {
    "disabled": true,
    "id": "id-values-range",
    "kind": "value",
    "name": "Min: 1 - Max: 10",
  },
]
`;

exports[`Correctly returns getSearchCompleteString 1`] = `"kind"`;

exports[`Correctly returns getSearchCompleteString with operator 1`] = `"cpu"`;
